<resources>
    <string name="app_name">Lockphone</string>

    <string name="skip">Saltar introducción</string>
    <string name="action_settings">Settings</string>
    <string name="insured">Ya tienes seguro?</string>
    <string name="phone_info_header">Información del teléfono</string>
    <string name="brand">Marca</string>
    <string name="model">Modelo</string>
    <string name="imei">IMEI</string>
    <string name="insured_value">Valor del Equipo</string>
    <string name="montly_cost">Costo Mensual</string>
    <string name="deductible">Deducible - Depreciacion</string>
    <string name="imgUrl_pattern">img class=\"tel\" src=\"([^\"]+)</string>
    <string name="imei_empty_image_base_url">http://www.imei.info/</string>
    <string name="imei_site_base_url">http://www.imei.info</string>
    <string name="imei_api_base_url">http://www.imei.info/api</string>
    <string name="imei_user">dcoellar</string>
    <string name="imei_password">dcoburei</string>
    <string name="registration_agreement">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat. </string>
    <string name="tutorial1_title">Que es Lockphone?</string>
    <string name="tutorial1_text">Una applicacion para asegurar tu teléfono contra pérdida o robo, no importa la marca o el modelo</string>
    <string name="tutorial2_title">Como Funciona?</string>
    <string name="tutorial2_text">1.- Reconocemos tu teléfono \n 2.- Registras tu información básica \n 3.- Seleccionas tu forma de pago preferida</string>
    <string name="tutorial3_title">Información privada</string>
    <string name="tutorial3_text">Unicamente registramos la marca, el modelo y el IMEI de tu teléfono para asegurarlo</string>
    <string name="recieved_value">Valor a recibir</string>
</resources>
