<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <LinearLayout
                android:id="@+id/launch_pager_indicator1"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal"
                android:background="@drawable/pager_indicator_active"/>
            <LinearLayout
                android:id="@+id/launch_pager_indicator2"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal"
                android:background="@drawable/pager_indicator"/>
            <LinearLayout
                android:id="@+id/launch_pager_indicator3"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal"
                android:background="@drawable/pager_indicator"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="120dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="12pt"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/black"
            android:text="@string/phone_info_header"
            android:gravity="center"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_weight="5" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_weight="2"
                    android:layout_marginLeft="0dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:fontFamily="sans-serif-light"
                        android:textSize="5pt"
                        android:text="@string/brand"/>
                    <TextView
                        android:id="@+id/brand"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:fontFamily="sans-serif-light"
                        android:textSize="8pt"
                        android:text=""/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:textSize="5pt"
                        android:text="@string/model"/>
                    <TextView
                        android:id="@+id/model"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:fontFamily="sans-serif-light"
                        android:textSize="8pt"
                        android:text=""/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:fontFamily="sans-serif-light"
                        android:textSize="5pt"
                        android:text="@string/imei"/>
                    <TextView
                        android:id="@+id/imei"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:fontFamily="sans-serif-light"
                        android:textSize="8pt"
                        android:text=""/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="105dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="sans-serif-light"
                            android:textSize="7pt"
                            android:layout_weight="1"
                            android:text="@string/insured_value"
                            android:gravity="center_vertical"/>
                        <TextView
                            android:id="@+id/insured_value"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:textSize="10pt"
                            android:text="$ 800.00"
                            android:gravity="center_vertical"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="sans-serif-light"
                            android:textSize="7pt"
                            android:layout_weight="1"
                            android:text="@string/montly_cost"
                            android:gravity="center_vertical"/>
                        <TextView
                            android:id="@+id/montly_cost"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="10pt"
                            android:fontFamily="sans-serif"
                            android:layout_weight="1"
                            android:text="$ 5.00"
                            android:gravity="center_vertical"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="7pt"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/deductible"
                            android:gravity="center_vertical"/>
                        <TextView
                            android:id="@+id/deductible"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="10pt"
                            android:fontFamily="sans-serif"
                            android:layout_weight="1"
                            android:text="$ 150.00"
                            android:gravity="center_vertical"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/insured"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="10dp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/lp_red"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"/>
    <LinearLayout
        android:id="@+id/buy"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center|center"
        android:background="@color/lp_red"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="CONTINUAR" />
    </LinearLayout>
</RelativeLayout>
