<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="12pt"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:text="@string/phone_info_header"
                android:gravity="center"/>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_weight="5" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_weight="2"
                        android:layout_marginLeft="0dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="15dp"
                            android:fontFamily="sans-serif-light"
                            android:textSize="5pt"
                            android:text="@string/brand"/>
                        <TextView
                            android:id="@+id/brand"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:fontFamily="sans-serif-light"
                            android:textSize="8pt"
                            android:text=""/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="15dp"
                            android:textSize="5pt"
                            android:text="@string/model"/>
                        <TextView
                            android:id="@+id/model"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:fontFamily="sans-serif-light"
                            android:textSize="8pt"
                            android:text=""/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="15dp"
                            android:fontFamily="sans-serif-light"
                            android:textSize="5pt"
                            android:text="@string/imei"/>
                        <TextView
                            android:id="@+id/imei"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:fontFamily="sans-serif-light"
                            android:textSize="8pt"
                            android:text=""/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="105dp"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:gravity="center_vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="sans-serif-light"
                                android:textSize="6pt"
                                android:layout_weight="1"
                                android:text="@string/insured_value"
                                android:gravity="center_vertical"/>
                            <TextView
                                android:id="@+id/insured_value"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:fontFamily="sans-serif"
                                android:textSize="10pt"
                                android:text="$ 800.00"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_weight="1"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="6pt"
                                android:layout_weight="1"
                                android:fontFamily="sans-serif-light"
                                android:text="@string/deductible"
                                android:gravity="center_vertical"/>
                            <TextView
                                android:id="@+id/deductible"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="10pt"
                                android:fontFamily="sans-serif"
                                android:layout_weight="1"
                                android:text="$ 150.00"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_weight="1"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="6pt"
                                android:layout_weight="1"
                                android:fontFamily="sans-serif-light"
                                android:text="@string/recieved_value"
                                android:gravity="center_vertical"/>
                            <TextView
                                android:id="@+id/recieved_value"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="10pt"
                                android:fontFamily="sans-serif"
                                android:layout_weight="1"
                                android:text="$ 150.00"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_weight="1"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="sans-serif-light"
                                android:textSize="6pt"
                                android:layout_weight="1"
                                android:text="@string/montly_cost"
                                android:gravity="center_vertical"/>
                            <TextView
                                android:id="@+id/montly_cost"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="10pt"
                                android:fontFamily="sans-serif"
                                android:layout_weight="1"
                                android:text="$ 5.00"
                                android:gravity="center_vertical"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
    <!-- The navigation drawer -->
    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="@color/lp_grey"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/lp_red">
            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/splash_lock"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/logo_white_small">
                    <LinearLayout
                        android:id="@+id/splash_lock_spacer"
                        android:layout_width="10dp"
                        android:layout_height="12dp"
                        android:background="@color/lp_red"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal">
                    </LinearLayout>
                    <RelativeLayout
                        android:id="@+id/splash_inner_lock"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/logo_inner_white_small">
                        <LinearLayout
                            android:id="@+id/splash_inner_lock_spacer"
                            android:layout_width="4dp"
                            android:layout_height="8dp"
                            android:background="@color/lp_red"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:orientation="horizontal">
                        </LinearLayout>
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"
                    android:textSize="10pt"
                    android:gravity="bottom"
                    android:text="Daniel Coellar"/>
                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"
                    android:textSize="8pt"
                    android:text="dcoellar@gmail.com"/>
            </LinearLayout>
        </LinearLayout>
        <ListView
            android:id="@+id/menu_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:background="@color/lp_grey"/>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
